# DesignPatternsCPP

./: README.md
Catalog/AbstractFactory/real1/code/: main.cpp
Catalog/AbstractFactory/real1/docs/: abstractFactory.vpp
Catalog/Bridge/real/code/: CommunicationDevice.h  hdlc.h  modbus.h
Catalog/Bridge/real1/code/: Bridge.pro  Protocol.h  SerialDevice.h  main.cpp
Catalog/Bridge/real1/docs/: bridge.uxf  bridge.vpp
Catalog/Command/real/code/: light.h  lightoffcommand.h  lightoncommand.h  remotecontrol.h
Catalog/Command/real1/code/: command.h
Catalog/Factory/easy/code/: clientcode.h  creator.h  factory.pro  main.cpp  product.h
Catalog/Factory/easy/docs/: factory.vpp
Catalog/Factory/real1/code/: READ ME.md  main.cpp
Catalog/Factory/real1/docs/: factory.vpp
Catalog/MVC/real/code/: view.cpp
Catalog/MVC/real1/code/: main.cpp  modelinterface.h
Catalog/Memento/real1/code/: main.cpp
Catalog/Memento/real1/docs/: memento.vpp
Catalog/Observer/real1/code/: observer.h  observer.pro  subject.h  weatherData.h
Catalog/Observer/real1/docs/: observer.vpp
Catalog/Observer/real2/code/: currentconditiondisplay.cpp  currentconditiondisplay.h  displayelemnt.h  weatherdata.cpp
Catalog/Prototype/real1/code/: main.cpp
Catalog/Prototype/real1/docs/: prototype.vpp
Catalog/Proxy/real1/code/: database.cpp  database.h  databaseparent.h  main.cpp  proxy.cpp  proxy.h  proxy.pro
Catalog/Proxy/real2/code/: database.h
Catalog/Singleton/real/code/: main.cpp  singletonloger.cpp
Catalog/Singleton/real1/code/: singletonlogger.h
Catalog/State/real1/code/: HasQuarterState.h  NoQuarterState.h  SoldOutState.h  SoldState.cpp  SoldState.h  StatePattern.pro  WinnerState.h  gumballmachine.cpp  gumballmachine.h  hasquarterstate.cpp  main.cpp  noquarterstate.cpp  soldoutstate.cpp  state.h  winnerstate.cpp
Catalog/State/real1/docs/: state.vpp
Catalog/State/real2/: FaceRecogntionState.cpp  ObjectDetectionState.cpp  RobotState.pro  SpeechRecognitionState.cpp  WakeWordState.cpp  WakeWordState.h  main.cpp
Catalog/Strategy/real1/code/: Duck.h  FlyBehavior.h  FlyNoWay.h  FlyRocketPowered.h  FlyWithWings.h  MallardDuck.h  ModelDuck.h  MuteQuack.h  NormalQuack.h  QuackBehavior.h  Squeak.h  StrategyPattern.pro  main.cpp
Catalog/Strategy/real2/code/: 01-StrategyPattern.pro  fileio.h  printclass.h
Catalog/Template/real1/code/: printable.h
Catalog/Visitor/real/code/: Visitor.pro  city.h  place.h
Catalog/Visitor/real/docs/: visitor.vpp
Catalog/Visitor/real1/code/: city.cpp  house.cpp  house.h  industry.cpp  industry.h  main.cpp  visitor.h  xmlvisitor.cpp  xmlvisitor.h
Catalog/adapter/: adapter.cpp
DesignPatterns/: DesignPatterns.pro
DesignPatterns/00_test/: 00_test.pro  main.cpp  malarddock.cpp
DesignPatterns/01-Strategy/: main.cpp  printclass.cpp
DesignPatterns/01-StrategyPattern/: starndadio.cpp  starndadio.h
DesignPatterns/02-Template/: 02-TemplatePattern.pro  fileio.cpp  fileio.h  standardio.cpp  standardio.h
DesignPatterns/02-TemplatePattern/: main.cpp  printable.cpp
DesignPatterns/03-Observer/: displayelemnt.cpp  observer.h
DesignPatterns/03-ObserverPattern/: 03-ObserverPattern.pro  main.cpp  observer.cpp  subject.h  weatherdata.h
DesignPatterns/04_Abstract/: dock.cpp  flyable.cpp  flyable.h  malarddock.h  quackable.cpp  quackable.h  rubberdock.cpp  rubberdock.h
DesignPatterns/04_AbstractParents/: dock.h
DesignPatterns/05-Decorator/: 05-DecoratorPattern.pro  main.cpp  plainpizza.cpp  plainpizza.h  toppingdecorator.cpp  toppingdecorator.h
DesignPatterns/05-DecoratorPattern/: main.cpp  mozzarella.cpp  mozzarella.h  pizza.cpp  pizza.h
DesignPatterns/06-Command/: 06-CommandPattern.pro  example2.cpp  lightoffcommand.cpp  remotecontrol.cpp
DesignPatterns/06-CommandPattern/: 06-CommandPattern.pro  command.h  light.cpp  lightoffcommand.cpp  lightoffcommand.h  lightoncommand.cpp  lightoncommand.h  main.cpp  model.qmodel
DesignPatterns/07-MVC/: 07-MVC.pro  controller.cpp  controller.h  controllerinterface.h  model.cpp  model.h  modelinterface.cpp  modelinterface.h  playerobserver.cpp  playerobserver.h  view.cpp  view.h  view.ui
DesignPatterns/08-SingleTone/: 8-SingleTone.pro
DesignPatterns/10-Proxy/: DataContainers.h  Proxy.h  Proxy.pro  main.cpp
DesignPatterns/11-State/: FaceRecogntionState.h  ObjectDetectionState.h  Robot.cpp  Robot.h  SpeechRecognitionState.h  State.h
DesignPatterns/12-Interpreter/: main.cpp
DesignPatternsGame/: CMakeLists.txt  LICENSE  README.md
DesignPatternsGame/src/: CMakeLists.txt  HomePage.qml  ImageBox.qml  UI.cpp  UI.h  main.cpp  main.qml  qml.qrc
Docs/: Elvis_operator.md  Explanations.md  finding_code_hotspots.MD  return-error-pointer.md  using_macro_based_and_or_define.md
ModernCPP/: Initialization Methods.md  SFINAE.cpp  SpaceshipOperator.cpp  Tag dispatching  VariadicFunctionTemplates.cpp  stringclass.md
TDD/GoogleTest/: CMakeLists.txt
TDD/GoogleTest/src/: CMakeLists.txt  Calc.cpp  Calc.h  config.h  main.cpp
TDD/GoogleTest/tst/: AddTest.cpp  CMakeLists.txt
TDD/GoogleTestAndQt/: CMakeLists.txt
TDD/GoogleTestAndQt/src/: CMakeLists.txt  Calc.cpp  main.cpp
TDD/GoogleTestAndQt/tst/: AddTest.cpp
TDD/GoogleTestAndQtAndQsLog/: CMakeLists.txt
TDD/GoogleTestAndQtAndQsLog/lib/QsLog/: CMakeLists.txt  bitbucket-pipelines.yml
TDD/GoogleTestAndQtAndQsLog/lib/QsLog/example/: log_example_main.cpp  log_example_window.pro  log_example_window_main.cpp
TDD/GoogleTestAndQtAndQsLog/lib/QsLog/unittest/: CMakeLists.txt
TDD/GoogleTestAndQtAndQsLog/src/: CMakeLists.txt  Calc.cpp  Calc.h  config.h  config.h.in  main.cpp
TDD/QtCmakeTDDTemplate/: CMakeLists.txt
TDD/QtCmakeTDDTemplate/src/: CMakeLists.txt  main.cpp
TDD/QtCmakeTDDTemplate/test/: CMakeLists.txt  tst_Template.cpp
uml/: Proxy.uxf  memento.uxf
